# RenderBoy

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/GLTFViewerOpenGL/: CMakeLists.txt  GLTFViewerOpenGL.cpp  GLTFViewerOpenGL.hpp
apps/GLTFViewerSoftware/: CMakeLists.txt  GLTFViewerSoftware.cpp  GLTFViewerSoftware.hpp
apps/common/: Application.hpp  GLUtils.hpp  viewer.cpp
apps/gl/: main.cpp
apps/viewer/: main.cpp
cmake/: Findassimp.cmake
include/RenderBoy/: Camera.hpp  Context.hpp  Frame.hpp  Geometry.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  Primitive.hpp  Renderer.hpp  Texture.hpp  utils.hpp
include/RenderBoy/Controls/: Trackball.hpp
include/RenderBoy/Math/: Mat.hpp  Mat3x3.hpp  Mat3x3.inl  Mat4x4.hpp  Mat4x4.inl  Quaternion.hpp  Quaternion.inl  Vec.hpp  Vec.inl  Vec2.hpp  Vec2.inl  Vec3.hpp  Vec3.inl  Vec4.hpp  Vec4.inl
include/RenderBoy/Renderer/: RasterizationRenderer.hpp  Rasterizer.hpp  Rasterizer.inl  Renderer.hpp
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Frame.hpp  Geometry.cpp  Geometry.hpp  Light.hpp  Mesh.hpp  Model.cpp  Model.hpp  Primitives.hpp  ScanLine.cpp  ScanLine.hpp  Scene.hpp  main.cpp  utils.cpp  utils.hpp
src/Camera/: Camera.cpp  Camera.hpp  OrbitControl.cpp  OrbitControl.hpp  OrthgraphicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
src/CameraControls/: OrbitControl.cpp  OrbitControl.hpp
src/Context/: Context.cpp  IContextImp.hpp
src/Context/OpenGL/: Context.cpp  Context.hpp  fragment.glsl  utils.hpp  vertex.glsl
src/Context/SoftwareRasterizer/: Context.cpp  Context.hpp  Rasterizer.inl
src/Controls/: Trackball.cpp  Trackball.hpp
src/Light/: AmbientLight.hpp  Light.hpp  PointLight.hpp
src/Material/: AbstractMaterial.hpp  DepthMaterial.hpp  GouraudMaterial.hpp  Material.cpp  Material.hpp  NormalMaterial.hpp  PhongMaterial.cpp  PhongMaterial.hpp  Texture.hpp
src/Model/: GLTFModelLoader.cpp  GLTFModelLoader.hpp  IModelLoader.hpp  ModelLoader.cpp
src/Renderer/: IRendererImpl.hpp  RasterizationRenderer.cpp  RasterizationRenderer.hpp  Rasterizer.inl  Renderer.cpp  Renderer.hpp  ScanLine.cpp  ScanLine.hpp  ScanLineRenderer.cpp  ScanLineRenderer.hpp
src/Renderer/CPURasterizer/: RasterizationRenderer.cpp  RasterizationRenderer.hpp  Rasterizer.hpp  Rasterizer.inl
tests/: CMakeLists.txt  config.toml  main.cpp  math.cpp
